fix color scheme

--- a/src/fullpage.css
+++ b/src/fullpage.css
@@ -190,7 +190,7 @@ html.fp-enabled,
     top: -2px;
     color: #ffffff;
     font-size: 14px;
-    font-family: arial, helvetica, sans-serif;
+    font-family: "Verdana", Geneva, sans-serif;
     white-space: nowrap;
     max-width: 220px;
     overflow: hidden;
