--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,18 @@
     width: 50%;
 }
 
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 60px;
+    height: 42px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+}
+
 #priority-list ul {
     position: absolute;
 }
