--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,18 @@
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
     opacity: 1;
     font-size: 16px;
+    /*background-color: #212938; //Dark Mode
+    color: #ffffff;*/
 }
 
 h1 {
-    font-size: 3em;
-    font-weight: 700;
-    color: #4972ba;
+    font-size: 60px;
+    font-weight: 300;
+    color: #40629f;
 }
 
 div.tooltip {
