--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
     display: flex;
 }
 
+#groceryMap {
+    display: flex;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
