--- a/src/index.css
+++ b/src/index.css
@@ -145,3 +145,124 @@ div.tooltip {
 i {
     font-size: 0.7em;
 }
+
+input, h4{
+    display: inline-block;
+}
+
+input[type=text] {
+    font-size: 14px;
+    font-weight: 700;
+    padding: 8px 8px;
+    width: 64px;
+    margin: 4px 0;
+    background-color: rgb(215, 231, 255) ;
+    text-align: center;
+    border-color: rgb(236, 236, 236);
+    
+  }
+
+  input[type=text]:focus {
+    background-color: rgb(255, 255, 255);
+  }
+
+#citySelect{
+    height: 40px;
+    margin-left: 80px;
+    margin-top: 10%;
+    background-color: rgb(16, 107, 212);
+    padding: .5em;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+}
+
+#citySelect:hover{
+    border: none;
+    background: orange;
+    box-shadow: 0px 0px 1px #777;
+}
+
+#radiusSelect{
+    display: inline;
+    margin-left: 250px;
+    background-color: rgb(16, 107, 212);
+    padding: .5em;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    border: none;
+}
+
+
+#zipSubmit {
+    display: inline-block;
+    margin-left: 20px;
+    background-color: rgb(54, 202, 86);
+    padding: .5em;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    border: none;
+   }
+#zipSubmit:hover {
+    border: none;
+    background: orange;
+    box-shadow: 0px 0px 1px #777;
+   }
+
+#chooseReset{
+    display: inline-block;
+    margin-left: 20px;
+    background-color: rgb(204, 92, 92);
+    padding: .5em;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    border: none; 
+}
+
+#chooseReset:hover {
+    border: none;
+    background: rgb(230, 114, 114);
+    box-shadow: 0px 0px 1px #777;
+   }
+
+#search {
+    display: inline-block;
+    margin-left: 80px;
+    background-color: rgb(54, 202, 86);
+    padding: .5em;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    border: none;
+   }
+#search:hover {
+    border: none;
+    background: orange;
+    box-shadow: 0px 0px 1px #777;
+    cursor: pointer;
+   }
